[project]
name = "flask-request-validate"
version = "0.1.0"
description = "Lightweight validation for Flask request args and form data"
authors = [{name="Blaine Wilson", email="blainekwilson@gmail.com"}]
maintainers = [{name="Blaine Wilson", email="blainekwilson@gmail.com"}]
license = {text = "MIT"}
keywords = ["flask", "validation", "request", "security", "input-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["flask>=1.0"]
requires-python = ">=3.8"
readme = "README.md"
[project.urls]
Homepage = "https://github.com/blainekwilson/flask-request-validate"
Repository = "https://github.com/blainekwilson/flask-request-validate"
Documentation = "https://github.com/blainekwilson/flask-request-validate#readme"
Issues = "https://github.com/blainekwilson/flask-request-validate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flask_request_validate"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"
markers = [
    "integration: integration tests",
    "unit: unit tests",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.isort]
profile = "black"
line_length = 100
skip = [".gitignore", ".venv"]
known_first_party = ["flask_request_validate"]

[tool.coverage.run]
source = ["src/flask_request_validate"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[project.scripts]
flask-request-validate-audit = "flask_request_validate.audit_security:main"
